k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-app
  template:
    metadata:
      labels:
        app: nestjs-app
    spec:
      containers:
        - name: nestjs-container
          image: almamyhaidara159/sugu-back-nestjs
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sugu-uploads
              mountPath: /app/uploads
      volumes:
        - name: sugu-uploads
          persistentVolumeClaim:
            claimName: upload-pvc
