k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sugu-ingress
  labels:
    name: sugu-ingress
  namespace: sugu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:  back.sugu.local
      http:
        paths:
          - backend:
              service:
                name: sugu-back-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
